tests/ui/feature-gates/feature-gate-result_ffi_guarantees.stderr
error: `extern` block uses type `Result<&u8, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:21:24
   |
LL |     fn result_ref_t(x: Result<&'static u8, ()>);
   |                        ^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint
note: the lint level is defined here
  --> $DIR/feature-gate-result_ffi_guarantees.rs:2:9
   |
LL | #![deny(improper_ctypes)]
   |         ^^^^^^^^^^^^^^^

error: `extern` block uses type `Result<extern "C" fn(), ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:23:23
   |
LL |     fn result_fn_t(x: Result<extern "C" fn(), ()>);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonNull<u8>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:25:28
   |
LL |     fn result_nonnull_t(x: Result<std::ptr::NonNull<u8>, ()>);
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<Unique<u8>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:27:27
   |
LL |     fn result_unique_t(x: Result<std::ptr::Unique<u8>, ()>);
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<u8>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:29:31
   |
LL |     fn result_nonzero_u8_t(x: Result<num::NonZero<u8>, ()>);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<u16>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:31:32
   |
LL |     fn result_nonzero_u16_t(x: Result<num::NonZero<u16>, ()>);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<u32>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:33:32
   |
LL |     fn result_nonzero_u32_t(x: Result<num::NonZero<u32>, ()>);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<u64>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:35:32
   |
LL |     fn result_nonzero_u64_t(x: Result<num::NonZero<u64>, ()>);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<usize>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:37:34
   |
LL |     fn result_nonzero_usize_t(x: Result<num::NonZero<usize>, ()>);
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<i8>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:39:31
   |
LL |     fn result_nonzero_i8_t(x: Result<num::NonZero<i8>, ()>);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<i16>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:41:32
   |
LL |     fn result_nonzero_i16_t(x: Result<num::NonZero<i16>, ()>);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<i32>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:43:32
   |
LL |     fn result_nonzero_i32_t(x: Result<num::NonZero<i32>, ()>);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<i64>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:45:32
   |
LL |     fn result_nonzero_i64_t(x: Result<num::NonZero<i64>, ()>);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<isize>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:47:34
   |
LL |     fn result_nonzero_isize_t(x: Result<num::NonZero<isize>, ()>);
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<TransparentStruct<NonZero<u8>>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:49:39
   |
LL |     fn result_transparent_struct_t(x: Result<TransparentStruct<num::NonZero<u8>>, ()>);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<TransparentEnum<NonZero<u8>>, ()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:51:37
   |
LL |     fn result_transparent_enum_t(x: Result<TransparentEnum<num::NonZero<u8>>, ()>);
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<u8>, PhantomData<()>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:53:28
   |
LL |     fn result_phantom_t(x: Result<num::NonZero<u8>, std::marker::PhantomData<()>>);
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<u8>, Z>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:55:47
   |
LL |     fn result_1zst_exhaustive_no_variant_t(x: Result<num::NonZero<u8>, Z>);
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<u8>, NoField>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:57:45
   |
LL |     fn result_1zst_exhaustive_no_field_t(x: Result<num::NonZero<u8>, NoField>);
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), &u8>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:60:24
   |
LL |     fn result_ref_e(x: Result<(), &'static u8>);
   |                        ^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), extern "C" fn()>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:62:23
   |
LL |     fn result_fn_e(x: Result<(), extern "C" fn()>);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), NonNull<u8>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:64:28
   |
LL |     fn result_nonnull_e(x: Result<(), std::ptr::NonNull<u8>>);
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), Unique<u8>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:66:27
   |
LL |     fn result_unique_e(x: Result<(), std::ptr::Unique<u8>>);
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), NonZero<u8>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:68:31
   |
LL |     fn result_nonzero_u8_e(x: Result<(), num::NonZero<u8>>);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), NonZero<u16>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:70:32
   |
LL |     fn result_nonzero_u16_e(x: Result<(), num::NonZero<u16>>);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), NonZero<u32>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:72:32
   |
LL |     fn result_nonzero_u32_e(x: Result<(), num::NonZero<u32>>);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), NonZero<u64>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:74:32
   |
LL |     fn result_nonzero_u64_e(x: Result<(), num::NonZero<u64>>);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), NonZero<usize>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:76:34
   |
LL |     fn result_nonzero_usize_e(x: Result<(), num::NonZero<usize>>);
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), NonZero<i8>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:78:31
   |
LL |     fn result_nonzero_i8_e(x: Result<(), num::NonZero<i8>>);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), NonZero<i16>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:80:32
   |
LL |     fn result_nonzero_i16_e(x: Result<(), num::NonZero<i16>>);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), NonZero<i32>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:82:32
   |
LL |     fn result_nonzero_i32_e(x: Result<(), num::NonZero<i32>>);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), NonZero<i64>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:84:32
   |
LL |     fn result_nonzero_i64_e(x: Result<(), num::NonZero<i64>>);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), NonZero<isize>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:86:34
   |
LL |     fn result_nonzero_isize_e(x: Result<(), num::NonZero<isize>>);
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), TransparentStruct<NonZero<u8>>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:88:39
   |
LL |     fn result_transparent_struct_e(x: Result<(), TransparentStruct<num::NonZero<u8>>>);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<(), TransparentEnum<NonZero<u8>>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:90:37
   |
LL |     fn result_transparent_enum_e(x: Result<(), TransparentEnum<num::NonZero<u8>>>);
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NonZero<u8>, PhantomData<()>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:92:28
   |
LL |     fn result_phantom_e(x: Result<num::NonZero<u8>, std::marker::PhantomData<()>>);
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<Z, NonZero<u8>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:94:47
   |
LL |     fn result_1zst_exhaustive_no_variant_e(x: Result<Z, num::NonZero<u8>>);
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: `extern` block uses type `Result<NoField, NonZero<u8>>`, which is not FFI-safe
  --> $DIR/feature-gate-result_ffi_guarantees.rs:96:45
   |
LL |     fn result_1zst_exhaustive_no_field_e(x: Result<NoField, num::NonZero<u8>>);
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not FFI-safe
   |
   = help: consider adding a `#[repr(C)]`, `#[repr(transparent)]`, or integer `#[repr(...)]` attribute to this enum
   = note: enum has no representation hint

error: aborting due to 38 previous errors

